Now selecting stars with N_measurements in Ha at least 5 instead of all measurements > 60

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -151,8 +151,22 @@
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>72)\n",
+    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>30)\n",
     "good_stars = groupby.index[groupby]\n",
+    "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select some stars with enough remaining measurements in specifically Ha \n",
+    "groupby = phot_df.groupby(['ID', 'Filter'])['MAG'].nunique()\n",
+    "groupby = groupby.reset_index()\n",
+    "groupby = groupby[groupby.Filter=='F656N']\n",
+    "good_stars = groupby[groupby['MAG']>6].ID.values\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]"
    ]
   },
@@ -166,7 +180,7 @@
     "star_filter_std = phot_df.groupby(['ID', 'Filter'])['MAG'].std()\n",
     "Ha_std   = star_filter_std[star_filter_std.index.get_level_values(1)=='F656N']\n",
     "mean_std = star_filter_std.groupby('ID').mean()\n",
-    "high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) > 1* mean_std].values"
+    "high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= mean_std].values"
    ]
   },
   {
