Added fractional aperture masking correction, which still calculates magnitudes if at most 15% of the aperture is masked for cosmic rays. Furthermore some minor bug fixes to the calibrate script

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -8,7 +8,28 @@
    "source": [
     "import pandas as pd\n",
     "%pylab inline\n",
-    "import matplotlib.gridspec as gridspec\n"
+    "import matplotlib.gridspec as gridspec\n",
+    "from astropy.io import ascii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_CR_app_df = pd.read_csv('NBadpix_all_exps.csv')\n",
+    "N_CR_app_df = N_CR_app_df.set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_CR_app_df['FracBadPix'] = N_CR_app_df['FLUX'] / N_CR_app_df['AREA']\n",
+    "N_CR_app_df.FracBadPix"
    ]
   },
   {
@@ -39,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#zmag  = {'F336W':23.46,'F438W':24.98,'F555W': 25.81, 'F814W': 24.67, 'F656N': 19.92}#[hst_filter]-0.1"
+    "# Join the photometry with the fraction of bad pixels\n",
+    "phot_df = phot_df.join(N_CR_app_df.FracBadPix, how='inner')"
    ]
   },
   {
@@ -48,7 +70,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-2.5*np.log10(phot_df['FLUX']) + np.array([zmag[w] for w in phot_df.index.get_level_values(1).values])-0.1 +2.5*np.log10(phot_df['ITIME'])"
+    "# Only keep apertures with max 15% flagged pixels\n",
+    "phot_df = phot_df[phot_df.FracBadPix < 0.15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the flux according to the number of bad pixels\n",
+    "phot_df['FluxCorr'] = phot_df['FLUX'] / (1-phot_df['FracBadPix'])\n",
+    "# Update the magnitudes for the stars that did not have one\n",
+    "zmag  = {'F336W':23.46,'F438W':24.98,'F555W': 25.81, 'F814W': 24.67, 'F656N': 19.92}#[hst_filter]-0.1\n",
+    "phot_df_no_MAG = phot_df[phot_df.CERROR=='BadPixels']\n",
+    "phot_df['MAG'][phot_df.CERROR=='BadPixels'] = -2.5*np.log10(phot_df_no_MAG['FluxCorr']) + np.array([zmag[w] for w in phot_df_no_MAG.index.get_level_values(1).values])-0.1 +2.5*np.log10(phot_df_no_MAG['ITIME'])"
    ]
   },
   {
@@ -68,7 +105,7 @@
    "outputs": [],
    "source": [
     "# First look for stars without CRs in there\n",
-    "phot_df = phot_df[phot_df.CERROR=='NoError']"
+    "#phot_df = phot_df[phot_df.CERROR=='NoError']"
    ]
   },
   {
@@ -79,7 +116,7 @@
    "source": [
     "# Only select stars with V band magnitudes between 15 and 20\n",
     "F555W_mags = phot_df['MAG']\n",
-    "selection  = (F555W_mags < 22) * (F555W_mags > 16)\n",
+    "selection  = (F555W_mags < 24) * (F555W_mags > 16)\n",
     "phot_df    = phot_df[selection]"
    ]
   },
@@ -123,7 +160,7 @@
    "source": [
     "# Select only stars with limited std in magnitudes\n",
     "groupby    = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].std()\n",
-    "groupby    = groupby.groupby('ID').median()<0.3#groupby < 1.5\n",
+    "groupby    = groupby.groupby('ID').median()<0.4#groupby < 1.5\n",
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "#phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(1)]]\n",
@@ -151,7 +188,7 @@
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>30)\n",
+    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>50)\n",
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]"
    ]
