--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -174,7 +174,7 @@
    "outputs": [],
    "source": [
     "# Select only stars with limited mag error\n",
-    "phot_df   = phot_df[phot_df['MERR']<0.1]"
+    "phot_df   = phot_df[phot_df['MERR']<0.05]"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>50)\n",
+    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>65)\n",
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]"
    ]
@@ -217,7 +217,7 @@
     "star_filter_std = phot_df.groupby(['ID', 'Filter'])['MAG'].std()\n",
     "Ha_std   = star_filter_std[star_filter_std.index.get_level_values(1)=='F656N']\n",
     "mean_std = star_filter_std.groupby('ID').mean()\n",
-    "high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= mean_std].values"
+    "high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= 1.1*mean_std].values"
    ]
   },
   {
@@ -263,6 +263,15 @@
     "          fancybox=True, shadow=True, ncol=5, fontsize=16)\n",
     "plt.suptitle(r'Stellar H$\\alpha$ brightness variability in 30-dor', y=1.03,fontsize=25)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phot_df"
    ]
   },
   {
