--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -70,8 +70,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We select only the magnitudes from the single drizzled frames\n",
+    "phot_df = phot_df[phot_df.index.get_level_values(4)=='SingleDrizzle']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Only keep apertures with max 15% flagged pixels\n",
-    "phot_df = phot_df[phot_df.FracBadPix < 0.15]"
+    "phot_df = phot_df[phot_df.FracBadPix < 0.12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#phot_df = phot_df[phot_df.index.get_level_values(1)!='F336W']\n",
+    "#phot_df = phot_df[phot_df.index.get_level_values(1)!='F438W']"
    ]
   },
   {
@@ -82,20 +102,11 @@
    "source": [
     "# Update the flux according to the number of bad pixels\n",
     "phot_df['FluxCorr'] = phot_df['FLUX'] / (1-phot_df['FracBadPix'])\n",
+    "phot_df[phot_df['FluxCorr']!=phot_df['FLUX']]['CERROR'] = 'FixedBadPix'\n",
     "# Update the magnitudes for the stars that did not have one\n",
     "zmag  = {'F336W':23.46,'F438W':24.98,'F555W': 25.81, 'F814W': 24.67, 'F656N': 19.92}#[hst_filter]-0.1\n",
     "phot_df_no_MAG = phot_df[phot_df.CERROR=='BadPixels']\n",
     "phot_df['MAG'][phot_df.CERROR=='BadPixels'] = -2.5*np.log10(phot_df_no_MAG['FluxCorr']) + np.array([zmag[w] for w in phot_df_no_MAG.index.get_level_values(1).values])-0.1 +2.5*np.log10(phot_df_no_MAG['ITIME'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We select only the magnitudes from the single drizzled frames\n",
-    "phot_df = phot_df[phot_df.index.get_level_values(4)=='SingleDrizzle']"
    ]
   },
   {
@@ -116,7 +127,7 @@
    "source": [
     "# Only select stars with V band magnitudes between 15 and 20\n",
     "F555W_mags = phot_df['MAG']\n",
-    "selection  = (F555W_mags < 24) * (F555W_mags > 16)\n",
+    "selection  = (F555W_mags < 24) * (F555W_mags > 15)\n",
     "phot_df    = phot_df[selection]"
    ]
   },
@@ -144,15 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groupby    = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -160,7 +162,8 @@
    "source": [
     "# Select only stars with limited std in magnitudes\n",
     "groupby    = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].std()\n",
-    "groupby    = groupby.groupby('ID').median()<0.4#groupby < 1.5\n",
+    "groupby    = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].std()\n",
+    "groupby    = groupby.groupby('ID').median()<1.2#groupby < 1.5\n",
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "#phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(1)]]\n",
@@ -174,7 +177,7 @@
    "outputs": [],
    "source": [
     "# Select only stars with limited mag error\n",
-    "phot_df   = phot_df[phot_df['MERR']<0.05]"
+    "phot_df   = phot_df[phot_df['MERR']<0.1]"
    ]
   },
   {
@@ -184,11 +187,11 @@
    "outputs": [],
    "source": [
     "# Select some stars with enough remaining measurements\n",
-    "groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=5\n",
+    "groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>65)\n",
+    "groupby    = (phot_df.groupby('ID')['MAG'].nunique()>60)\n",
     "good_stars = groupby.index[groupby]\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]"
    ]
@@ -203,7 +206,7 @@
     "groupby = phot_df.groupby(['ID', 'Filter'])['MAG'].nunique()\n",
     "groupby = groupby.reset_index()\n",
     "groupby = groupby[groupby.Filter=='F656N']\n",
-    "good_stars = groupby[groupby['MAG']>6].ID.values\n",
+    "good_stars = groupby[groupby['MAG']>=7].ID.values\n",
     "phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]"
    ]
   },
@@ -217,7 +220,8 @@
     "star_filter_std = phot_df.groupby(['ID', 'Filter'])['MAG'].std()\n",
     "Ha_std   = star_filter_std[star_filter_std.index.get_level_values(1)=='F656N']\n",
     "mean_std = star_filter_std.groupby('ID').mean()\n",
-    "high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= 1.1*mean_std].values"
+    "#high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= 1*mean_std].values\n",
+    "stellar_indices = phot_df.index.get_level_values(0).unique().values"
    ]
   },
   {
@@ -230,48 +234,40 @@
     "gs1 = gridspec.GridSpec(3,3)\n",
     "gs1.update(wspace=0, hspace=0) # set the spacing between axes. \n",
     "Nstars_plot = 9\n",
-    "filterlist = phot_df.index.get_level_values(1).unique()\n",
-    "for nstar, starID in enumerate(np.random.choice(high_Ha_var_stars, Nstars_plot, replace=False)):\n",
+    "filterlist = phot_df.index.get_level_values(1).unique()[1:] #skip F336W\n",
+    "for nstar, starID in enumerate(np.random.choice(stellar_indices, Nstars_plot, replace=False)):\n",
     "    for filter_iter, filter_ in enumerate(filterlist):\n",
     "        plt.subplot(gs1[nstar])\n",
     "        data = phot_df.loc[starID, filter_]\n",
     "        data = data[['MAG', 'MERR', 'Time']].sort_values(by='Time')\n",
     "        mags = data['MAG']\n",
-    "        mags = mags - np.max(mags) + filter_iter\n",
+    "        mags = mags - np.median(mags) + filter_iter\n",
     "        merr = data['MERR']\n",
     "        time = data['Time']\n",
     "        plt.plot(time,mags, linewidth=1.2, label=filter_)\n",
     "        plt.scatter(time,mags, c='red', s=5, label='')\n",
+    "        F555W_mag = str(np.round(phot_df.loc[starID, 'F555W']['MAG'].median(), 1))\n",
     "        plt.errorbar(time, mags, yerr=merr, c='black', ls='none', label='')\n",
-    "        plt.title('Star '+str(int(starID)), pad=-25, size=20)\n",
+    "        plt.title('Star '+str(int(starID))+r'. $M_{G}=$'+F555W_mag, pad=-25, size=20)\n",
     "        plt.xlim(-1,8.3)\n",
     "        \n",
     "        #plt.ylim(15.,18.5)\n",
     "        if nstar not in [0,3,6]:\n",
     "            plt.yticks([])\n",
     "        else:\n",
-    "            plt.ylabel('Shifted + normalized magnitude', size=16)\n",
+    "            plt.ylabel('Shifted magnitude', size=16)\n",
     "            plt.yticks(size=14)\n",
     "        if nstar not in [6,7,8]:\n",
     "            plt.xticks([])\n",
     "        else:\n",
     "            plt.xticks(size=16)\n",
     "            plt.xlabel(r'$\\Delta \\, T$ [days]',size=16)\n",
-    "\n",
+    "        plt.ylim(-0.3,len(filterlist)-0.3)\n",
     "plt.tight_layout()\n",
     "plt.legend(loc='upper center', bbox_to_anchor=(-0.5, -0.15),\n",
     "          fancybox=True, shadow=True, ncol=5, fontsize=16)\n",
     "plt.suptitle(r'Stellar H$\\alpha$ brightness variability in 30-dor', y=1.03,fontsize=25)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phot_df"
    ]
   },
   {
