added some plotting features

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_plots(phot_df):\n",
+    "def generate_plots(phot_df, high_var=False):\n",
     "    # Select those with std(Ha)> std(broadband)\n",
     "    star_filter_std = phot_df.groupby(['ID', 'Filter'])['MAG'].std()\n",
     "    Ha_std   = star_filter_std[star_filter_std.index.get_level_values(1)=='F656N']\n",
@@ -132,7 +132,10 @@
     "    gs1.update(wspace=0, hspace=0) # set the spacing between axes. \n",
     "    Nstars_plot = 9\n",
     "    filterlist = phot_df.index.get_level_values(1).unique()[1:] #skip F336W\n",
-    "    toplot = np.random.choice(high_Ha_var_stars, Nstars_plot, replace=False)\n",
+    "    if high_var:\n",
+    "        toplot = np.random.choice(high_Ha_var_stars, Nstars_plot, replace=False)\n",
+    "    else:\n",
+    "        toplot = np.random.choice(stellar_indices, Nstars_plot, replace=False)\n",
     "    for nstar, starID in enumerate(toplot):\n",
     "        for filter_iter, filter_ in enumerate(filterlist):\n",
     "            plt.subplot(gs1[nstar])\n",
@@ -174,8 +177,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_df = prepare_df(phot_df_pms_stars)\n",
-    "generate_plots(cleaned_df)"
+    "try:\n",
+    "    generate_plots(cleaned_df_pms, high_var=True)\n",
+    "except:\n",
+    "    cleaned_df_pms = prepare_df(phot_df_pms_stars)    \n",
+    "    generate_plots(cleaned_df_pms, high_var=True)"
    ]
   },
   {
@@ -184,8 +190,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_df = prepare_df(phot_df_all_stars)\n",
-    "generate_plots(cleaned_df)"
+    "try:\n",
+    "    generate_plots(cleaned_df_all)\n",
+    "except:\n",
+    "    cleaned_df_all = prepare_df(phot_df_all_stars)\n",
+    "    generate_plots(cleaned_df)"
    ]
   }
  ],
