Added red giants list

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -54,6 +54,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Red giants\n",
+    "red_giant_coords = ascii.read('../HST_Guido/redgiants_coords.txt')\n",
+    "phot_df_redgiants = phot_df_all_stars.loc[red_giant_coords['ID']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def prepare_df(phot_df):\n",
     "    # We select only the magnitudes from the single drizzled frames\n",
     "    phot_df = phot_df[phot_df.index.get_level_values(4)=='SingleDrizzle']\n",
@@ -90,14 +101,14 @@
     "    #phot_df    = phot_df.droplevel([2,4]).loc[good_stars]\n",
     "    \n",
     "    # Select only stars with limited mag error\n",
-    "    phot_df   = phot_df[phot_df['MERR']<0.1]\n",
+    "    phot_df   = phot_df[phot_df['MERR']<0.15]\n",
     "    \n",
     "    # Select some stars with enough remaining measurements\n",
     "    groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>68)\n",
+    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>60)\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    \n",
@@ -168,6 +179,7 @@
     "    plt.legend(loc='upper center', bbox_to_anchor=(-0.5, -0.15),\n",
     "              fancybox=True, shadow=True, ncol=5, fontsize=16)\n",
     "    plt.suptitle(r'Stellar H$\\alpha$ brightness variability in 30-dor', y=1.03,fontsize=25)\n",
+    "    plt.savefig('output.png', dpi=200)\n",
     "    plt.show()"
    ]
   },
@@ -178,10 +190,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    generate_plots(cleaned_df_pms, high_var=True)\n",
+    "    generate_plots(cleaned_df_pms, high_var=False)\n",
     "except:\n",
     "    cleaned_df_pms = prepare_df(phot_df_pms_stars)    \n",
-    "    generate_plots(cleaned_df_pms, high_var=True)"
+    "    generate_plots(cleaned_df_pms, high_var=False)"
    ]
   },
   {
@@ -190,12 +202,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    generate_plots(cleaned_df_all)\n",
-    "except:\n",
-    "    cleaned_df_all = prepare_df(phot_df_all_stars)\n",
-    "    generate_plots(cleaned_df)"
+    "cleaned_df_all = prepare_df(phot_df_redgiants)\n",
+    "generate_plots(cleaned_df_all)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
