--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -65,11 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_df(phot_df):\n",
+    "ef prepare_df(phot_df):\n",
     "    # We select only the magnitudes from the single drizzled frames\n",
     "    phot_df = phot_df[phot_df.index.get_level_values(4)=='SingleDrizzle']\n",
     "    # Only keep apertures with max 15% flagged pixels\n",
-    "    phot_df = phot_df[phot_df.FracBadPix < 0.12]\n",
+    "    phot_df = phot_df[phot_df.FracBadPix < 0.05]\n",
     "    \n",
     "    # Update the flux according to the number of bad pixels\n",
     "    phot_df['FluxCorr'] = phot_df['FLUX'] / (1-phot_df['FracBadPix'])\n",
@@ -81,7 +81,7 @@
     "    \n",
     "    # Only select stars with V band magnitudes between 15 and 20\n",
     "    F555W_mags = phot_df['MAG']\n",
-    "    selection  = (F555W_mags < 24) * (F555W_mags > 15)\n",
+    "    selection  = (F555W_mags < 19.5) * (F555W_mags > 15)\n",
     "    phot_df    = phot_df[selection]\\\n",
     "    \n",
     "    # Take only values with no large shift\n",
@@ -199,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "cleaned_df_all = prepare_df(phot_df_redgiants)\n",
