--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -53,6 +53,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\"\"\"photometryfile = 'APP_phot_all_exps_pmsstars_norecenter.csv'\n",
     "badpixphotometry = 'NBadpix_all_exps_pmsstars_norecenter.csv'\n",
@@ -98,7 +105,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# new method\n",
+    "photometryfile = 'subset_flt_photometry.csv'\n",
+    "read_in = pd.read_csv(photometryfile)\n",
+    "phot_df_newmthod = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -147,14 +159,14 @@
     "    #phot_df    = phot_df.droplevel([2,4]).loc[good_stars]\n",
     "    \n",
     "    # Select only stars with limited mag error\n",
-    "    phot_df   = phot_df[phot_df['MERR']<0.2]\n",
+    "    phot_df   = phot_df[phot_df['MERR']<0.1]\n",
     "    \n",
     "    # Select some stars with enough remaining measurements\n",
     "    groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>25)\n",
+    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>50)\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    \n",
@@ -250,7 +262,7 @@
    },
    "outputs": [],
    "source": [
-    "cleaned_df_all = prepare_df(phot_df_all_stars, True)\n",
+    "cleaned_df_all = prepare_df(phot_df_newmthod, False)\n",
     "generate_plots(cleaned_df_all)"
    ]
   },
