--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -53,47 +53,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"photometryfile = 'APP_phot_all_exps_pmsstars_norecenter.csv'\n",
-    "badpixphotometry = 'NBadpix_all_exps_pmsstars_norecenter.csv'\n",
-    "N_CR_app_df = pd.read_csv(badpixphotometry)\n",
-    "N_CR_app_df = N_CR_app_df.set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
-    "N_CR_app_df['FracBadPix'] = N_CR_app_df['FLUX'] / N_CR_app_df['AREA']\n",
-    "read_in = pd.read_csv(photometryfile)\n",
-    "phot_df_pms_norecenter = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
-    "# Join the photometry with the fraction of bad pixels\n",
-    "phot_df_pms_stars_norecenter = phot_df.join(N_CR_app_df.FracBadPix, how='inner')\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"photometryfile = 'APP_phot_all_exps_pmsstars_largeann.csv'\n",
-    "\n",
-    "#N_CR_app_df = pd.read_csv(badpixphotometry)\n",
-    "#N_CR_app_df = N_CR_app_df.set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
-    "#N_CR_app_df['FracBadPix'] = N_CR_app_df['FLUX'] / N_CR_app_df['AREA']\n",
-    "read_in = pd.read_csv(photometryfile)\n",
-    "phot_df_pms_stars_largeann = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
-    "# Join the photometry with the fraction of bad pixels\n",
-    "#phot_df_pms_stars_largeann = phot_df.join(N_CR_app_df.FracBadPix, how='inner')\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Red giants\n",
     "red_giant_coords = ascii.read('../HST_Guido/redgiants_coords.txt')\n",
@@ -110,6 +69,20 @@
     "photometryfile = 'subset_flt_photometry.csv'\n",
     "read_in = pd.read_csv(photometryfile)\n",
     "phot_df_newmthod = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
+    "minmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
+    "\n",
+    "a = (maxmag - minmag) < 0.015\n",
+    "a = a.groupby('ID').sum() == 5\n",
+    "a.index[a]"
    ]
   },
   {
@@ -150,23 +123,24 @@
     "    phot_df.loc[:,'Time'] = phot_df['Time'] - phot_df['Time'].min()\n",
     "    \n",
     "    # Select only stars with limited std in magnitudes\n",
-    "    groupby    = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].std()\n",
-    "    groupby    = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].std()\n",
-    "    groupby    = groupby.groupby('ID').median()<1.#groupby < 1.5\n",
-    "    good_stars = groupby.index[groupby]\n",
+    "    maxmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
+    "    minmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
+    "    a = (maxmag - minmag) < 0.015\n",
+    "    a = a.groupby('ID').sum() == 5\n",
+    "    good_stars = a.index[a].values\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    #phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(1)]]\n",
     "    #phot_df    = phot_df.droplevel([2,4]).loc[good_stars]\n",
     "    \n",
     "    # Select only stars with limited mag error\n",
-    "    phot_df   = phot_df[phot_df['MERR']<0.1]\n",
+    "    phot_df   = phot_df[phot_df['MERR']<0.2]\n",
     "    \n",
     "    # Select some stars with enough remaining measurements\n",
     "    groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>50)\n",
+    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>30)\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    \n",
@@ -250,7 +224,7 @@
     "#try:\n",
     "#    generate_plots(cleaned_df_pms, high_var=False)\n",
     "#except:\n",
-    "cleaned_df_pms = prepare_df(phot_df_pms_stars, True)    \n",
+    "cleaned_df_pms = prepare_df(phot_df_all_stars, True)    \n",
     "generate_plots(cleaned_df_pms, high_var=False)"
    ]
   },
@@ -294,13 +268,16 @@
    "outputs": [],
    "source": [
     "# Trumpet plot\n",
-    "magnitudes = redstars_df['MAG']\n",
+    "magnitudes = phot_df_newmthod['MAG']\n",
     "magnitudes = magnitudes#[magnitudes.index.get_level_values(3)=='short']\n",
     "filters = magnitudes.index.get_level_values(1).unique()\n",
+    "plt.figure(figsize=(10,6))\n",
+    "num=0\n",
     "for filter_ in filters:\n",
     "    epochs  = magnitudes.loc[:,filter_,:].index.get_level_values(1).unique()\n",
     "    mags_t0 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[0], :])\n",
-    "    plt.figure(figsize=(10,6))\n",
+    "    num+=1\n",
+    "    plt.subplot('23'+str(num))\n",
     "    for i in range(len(epochs)-1):\n",
     "        mags_t1 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[i+1], :])\n",
     "        join_mags = mags_t0.join(mags_t1, lsuffix = '_t0', rsuffix='_t1', how='inner')\n",
@@ -308,11 +285,19 @@
     "        median_mags = magnitudes.loc[:, filter_, :].groupby(['ID', 'Exp_Length', 'DrizzleType']).median()\n",
     "        join_mags = join_mags.join(median_mags)\n",
     "        plt.scatter(join_mags['MAG'], join_mags['DeltaMag'], s=1, c='grey')\n",
-    "    plt.title('Delta Mag between adjecent epochs for '+str(filter_))\n",
-    "    plt.ylabel('Delta Mag')\n",
-    "    plt.xlabel('Median magnitude')\n",
-    "    plt.ylim(-0.5,0.5)\n",
-    "    plt.show()"
+    "    plt.title(filter_, pad=-15)\n",
+    "    plt.xlim(14,27)\n",
+    "    if num in [1,4,7]:\n",
+    "        plt.ylabel('Delta Mag')\n",
+    "    else:\n",
+    "        plt.yticks([])\n",
+    "    if num in [4,5]:\n",
+    "        plt.xlabel('Median magnitude')\n",
+    "    else:\n",
+    "        plt.xticks([])\n",
+    "    plt.ylim(-1,1)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -325,13 +310,16 @@
    "source": [
     "# Trumpet plot\n",
     "from matplotlib.colors import LogNorm\n",
-    "magnitudes = phot_df_all_stars['MAG']\n",
-    "magnitudes = magnitudes[magnitudes.index.get_level_values(3)=='deep']\n",
+    "magnitudes = phot_df_newmthod['MAG']\n",
+    "magnitudes = magnitudes#[magnitudes.index.get_level_values(3)=='deep']\n",
     "filters = magnitudes.index.get_level_values(1).unique()\n",
+    "plt.figure(figsize=(20,10))\n",
+    "num=0\n",
     "for filter_ in filters:\n",
     "    epochs  = magnitudes.loc[:,filter_,:].index.get_level_values(1).unique()\n",
     "    mags_t0 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[0], :])\n",
-    "    plt.figure(figsize=(10,6))\n",
+    "    num+=1\n",
+    "    plt.subplot('23'+str(num))\n",
     "    xs, ys = np.array([]), np.array([])\n",
     "    for i in range(len(epochs)-1):\n",
     "        mags_t1 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[i+1], :])\n",
@@ -343,12 +331,24 @@
     "        x, y = x[np.isfinite(x)*np.isfinite(y)], y[np.isfinite(x)*np.isfinite(y)]\n",
     "        xs = np.hstack((xs,x))\n",
     "        ys = np.hstack((ys,y))\n",
-    "    plt.hist2d(xs, ys, bins=700, cmap='jet', norm = LogNorm())\n",
-    "    plt.title('Delta Mag between adjecent epochs for '+str(filter_))\n",
+    "    plt.hist2d(xs, ys, bins=500, cmap='jet', norm = LogNorm(), cmin=5)\n",
+    "    plt.title(filter_, pad=-15)\n",
     "    plt.ylabel('Delta Mag')\n",
     "    plt.xlabel('Median magnitude')\n",
-    "    plt.ylim(-0.5,0.5)\n",
-    "    plt.show()"
+    "    plt.ylim(-1,1)\n",
+    "    plt.xlim(14,27)\n",
+    "    if num in [1,4,7]:\n",
+    "        plt.ylabel('Delta Mag')\n",
+    "    else:\n",
+    "        plt.yticks([])\n",
+    "    if num in [4,5]:\n",
+    "        plt.xlabel('Median magnitude')\n",
+    "    else:\n",
+    "        plt.xticks([])\n",
+    "    plt.ylim(-1,1)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('trumpet_diagrams.png', dpi=500)\n",
+    "plt.show()"
    ]
   },
   {
