Updates from saturday 12okt

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# Red giants\n",
     "red_giant_coords = ascii.read('../HST_Guido/redgiants_coords.txt')\n",
-    "phot_df_redgiants = phot_df_all_stars.loc[red_giant_coords['ID']]"
+    "phot_df_redgiants = phot_df_newmthod.loc[red_giant_coords['ID']]"
    ]
   },
   {
@@ -76,13 +76,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "maxmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
-    "minmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
-    "\n",
-    "a = (maxmag - minmag) < 0.015\n",
-    "a = a.groupby('ID').sum() == 5\n",
-    "a.index[a]"
+    "#Xuniques = phot_df_pms_stars['XINIT'].unique()\n",
+    "#Yuniques = phot_df_pms_stars['YINIT'].unique()\n",
+    "Xall = ascii.read('../HST_Guido/30dor_all_newerr.UBVIHa.rot')['col1','col2'].to_pandas()\n",
+    "Yall = ascii.read('../HST_Guido/30dor_all_newerr.UBVIHa.rot')['col1','col2'].to_pandas()"
    ]
   },
   {
@@ -105,18 +110,20 @@
     "        phot_df_no_MAG = phot_df[phot_df.CERROR=='BadPixels']\n",
     "        phot_df['MAG'][phot_df.CERROR=='BadPixels'] = -2.5*np.log10(phot_df_no_MAG['FluxCorr']) + np.array([zmag[w] for w in phot_df_no_MAG.index.get_level_values(1).values])-0.1 +2.5*np.log10(phot_df_no_MAG['ITIME'])\n",
     "\n",
+    "    if not CRcorrect:\n",
+    "        phot_df = phot_df[phot_df.CERROR !='BadPixels']\n",
     "    phot_df = phot_df[phot_df.CERROR != 'BigShift']\n",
     "    \n",
     "    # Only select stars with V band magnitudes between 15 and 20\n",
     "    F555W      = phot_df[phot_df.index.get_level_values(1)=='F555W'].groupby(['ID'])['MAG'].median()\n",
-    "    selection  = (F555W>15)*(F555W<28)\n",
+    "    selection  = (F555W>17)*(F555W<28)\n",
     "    selection  = selection.index[selection].values\n",
     "    phot_df    = phot_df[[w in selection for w in phot_df.index.get_level_values(0)]]\n",
     "    #selection  = (F555W_mags < 18) * (F555W_mags > 15)\n",
     "    #phot_df    = phot_df[selection]\n",
     "    \n",
     "    # Take only values with no large shift\n",
-    "    phot_df    = phot_df[phot_df.XSHIFT**2+phot_df.YSHIFT**2 < 4]\n",
+    "    #phot_df    = phot_df[phot_df.XSHIFT**2+phot_df.YSHIFT**2 < 6]\n",
     "    \n",
     "    # Normalize observation time \n",
     "    phot_df.loc[:,'Time'] = pd.to_numeric(phot_df.index.get_level_values(2))\n",
@@ -125,22 +132,22 @@
     "    # Select only stars with limited std in magnitudes\n",
     "    maxmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
     "    minmag     = phot_df.groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
-    "    a = (maxmag - minmag) < 0.015\n",
-    "    a = a.groupby('ID').sum() == 5\n",
-    "    good_stars = a.index[a].values\n",
-    "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
+    "    a = maxmag - minmag\n",
+    "    a = ((a<0.4).groupby('ID').sum()>=5)\n",
+    "    good_stars = a.index[a]\n",
+    "    phot_df    = phot_df.loc[good_stars,:]#[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    #phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(1)]]\n",
     "    #phot_df    = phot_df.droplevel([2,4]).loc[good_stars]\n",
     "    \n",
     "    # Select only stars with limited mag error\n",
-    "    phot_df   = phot_df[phot_df['MERR']<0.2]\n",
+    "    phot_df   = phot_df[phot_df['MERR']<0.15]\n",
     "    \n",
     "    # Select some stars with enough remaining measurements\n",
-    "    groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
-    "    good_stars = groupby.index[groupby]\n",
-    "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
+    "    #groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
+    "    #good_stars = groupby.index[groupby]\n",
+    "    #phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "\n",
-    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>30)\n",
+    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>55)\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    \n",
@@ -149,7 +156,7 @@
     "    groupby = phot_df.groupby(['ID', 'Filter'])['MAG'].nunique()\n",
     "    groupby = groupby.reset_index()\n",
     "    groupby = groupby[groupby.Filter=='F656N']\n",
-    "    good_stars = groupby[groupby['MAG']>=4].ID.values\n",
+    "    good_stars = groupby[groupby['MAG']>=6].ID.values\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    return phot_df"
    ]
@@ -162,12 +169,12 @@
    "source": [
     "def generate_plots(phot_df, high_var=False):\n",
     "    # Select those with std(Ha)> std(broadband)\n",
-    "    star_filter_std = phot_df.groupby(['ID', 'Filter'])['MAG'].std()\n",
-    "    Ha_std   = star_filter_std[star_filter_std.index.get_level_values(1)=='F656N']\n",
-    "    mean_std = star_filter_std.groupby('ID').mean()\n",
-    "    high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= 1*mean_std].values\n",
+    "    #star_filter_std = phot_df.groupby(['ID', 'Filter'])['MAG'].std()\n",
+    "    #Ha_std   = star_filter_std[star_filter_std.index.get_level_values(1)=='F656N']\n",
+    "    #mean_std = star_filter_std.groupby('ID').mean()\n",
+    "    #high_Ha_var_stars = mean_std.index[Ha_std.droplevel(1) >= 1*mean_std].values\n",
     "    stellar_indices = phot_df.index.get_level_values(0).unique().values\n",
-    "    high_Ha_var_stars\n",
+    "    #high_Ha_var_stars\n",
     "    \n",
     "    \n",
     "    plt.figure(figsize=(18,16))\n",
@@ -218,13 +225,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "#try:\n",
-    "#    generate_plots(cleaned_df_pms, high_var=False)\n",
-    "#except:\n",
-    "cleaned_df_pms = prepare_df(phot_df_all_stars, True)    \n",
+    "cleaned_df_pms = prepare_df(phot_df_all_stars, False)    \n",
     "generate_plots(cleaned_df_pms, high_var=False)"
    ]
   },
@@ -246,58 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "magnitudes[magnitudes.index.get_level_values(1)=='F814W']\n",
-    "magnitudes.index.get_level_values(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "redstars_df = prepare_df(phot_df_redgiants, True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# Trumpet plot\n",
-    "magnitudes = phot_df_newmthod['MAG']\n",
-    "magnitudes = magnitudes#[magnitudes.index.get_level_values(3)=='short']\n",
-    "filters = magnitudes.index.get_level_values(1).unique()\n",
-    "plt.figure(figsize=(10,6))\n",
-    "num=0\n",
-    "for filter_ in filters:\n",
-    "    epochs  = magnitudes.loc[:,filter_,:].index.get_level_values(1).unique()\n",
-    "    mags_t0 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[0], :])\n",
-    "    num+=1\n",
-    "    plt.subplot('23'+str(num))\n",
-    "    for i in range(len(epochs)-1):\n",
-    "        mags_t1 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[i+1], :])\n",
-    "        join_mags = mags_t0.join(mags_t1, lsuffix = '_t0', rsuffix='_t1', how='inner')\n",
-    "        join_mags['DeltaMag'] = join_mags['MAG_t1'] - join_mags['MAG_t0']\n",
-    "        median_mags = magnitudes.loc[:, filter_, :].groupby(['ID', 'Exp_Length', 'DrizzleType']).median()\n",
-    "        join_mags = join_mags.join(median_mags)\n",
-    "        plt.scatter(join_mags['MAG'], join_mags['DeltaMag'], s=1, c='grey')\n",
-    "    plt.title(filter_, pad=-15)\n",
-    "    plt.xlim(14,27)\n",
-    "    if num in [1,4,7]:\n",
-    "        plt.ylabel('Delta Mag')\n",
-    "    else:\n",
-    "        plt.yticks([])\n",
-    "    if num in [4,5]:\n",
-    "        plt.xlabel('Median magnitude')\n",
-    "    else:\n",
-    "        plt.xticks([])\n",
-    "    plt.ylim(-1,1)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "redstars_df = prepare_df(phot_df_redgiants, False)\n",
+    "generate_plots(redstars_df)"
    ]
   },
   {
@@ -349,6 +305,25 @@
     "plt.tight_layout()\n",
     "plt.savefig('trumpet_diagrams.png', dpi=500)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phot_df_newmthod.groupby(['ID', 'Filter'])['MAG'].std().hist(bins=np.arange(0,2,0.005), alpha=0.5, color='blue')\n",
+    "phot_df_all_stars.groupby(['ID', 'Filter'])['MAG'].std().hist(bins=np.arange(0,2,0.005), alpha=0.5, color='red')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-2.5*np.log10(phot_df_newmthod[phot_df_newmthod.index.get_level_values(1)=='F656N']['FLUX']) + 19.92 + 2.5*np.log10(1320)"
    ]
   },
   {
